출발점 그룹화 문제 해결